@@ -45,9 +45,10 @@ public:
 	/** Storyscreen result. */
 	enum RESULT {
 		NEXT,	/**< The user pressed the go-next button. */
-		BACK,	/**< The user pressed the go-back button (TODO: not implemented). */
-		SKIP,	/**< The user pressed the skip button. */
-		QUIT	/**< The user pressed the quit button (TODO: not implemented). */
+		BACK,	/**< The user pressed the go-back button. */
+		FIRST,	/**< The user pressed the go-first button. */
+		LAST,	/**< The user pressed the go-last button. */
+		QUIT	/**< The user selected quit. */
 	};
 
 	/**
@@ -57,7 +58,10 @@ public:
 	 * @param next_button Next button. Shouldn't be destroyed before the part_ui object.
 	 * @param skip_button Skip button. Shouldn't be destroyed before the part_ui object.
 	 */
-	part_ui(part& p, display& disp, gui::button& next_button, gui::button& skip_button);
+        part_ui(part& p, display& disp, 
+                gui::button& next_button,  gui::button& back_button, 
+                gui::button& first_button, gui::button& last_button,
+		gui::button& play_button);
 
 	/**
 	 * Render and display the storyscreen, process and return user input.
@@ -70,10 +74,11 @@ private:
 	CVideo& video_; // convenience, it's currently obtained from disp_
 	CKey keys_;     // convenience
 
-	//gui::button& back_button_;
 	gui::button& next_button_;
-	gui::button& skip_button_;
-	//gui::button& quit_button_;
+	gui::button& back_button_;
+	gui::button& first_button_;
+	gui::button& last_button_;
+	gui::button& play_button_;
 
 	RESULT ret_;
 
