@@ -120,6 +120,7 @@ Version 1.9.0-svn:
    * Clicking on some elements of sidebar now open the related help page
    * Display weapon stats in recruit/recall dialog the same way as in sidebar
    * Accuracy/parry have its own line and tooltip in sidebar.
+   * Add first, last, play and back buttons to storyscreens
  * Units:
    * Giant Rat moved from DiD to core.
  * WML Engine:
